# maker

./: CMakeLists.txt  example.json
cmake/: FindFinder.cmake  FindJson.cmake
includes/: Assets.hpp  Build.hpp  CMake.hpp  CMakeModule.hpp  CodeBase.hpp  ConvertCase.hpp  Repository.hpp  Warn.hpp
sources/: main.cpp
